--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_core: ^3.3.0 
   cloud_firestore: ^5.2.0
   http: ^1.2.1
+  reorderable_grid_view: ^2.2.8
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
