--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,8 @@ dependencies:
   cloud_firestore: ^5.2.0
   http: ^1.2.1
   reorderable_grid_view: ^2.2.8
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
