--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   reorderable_grid_view: ^2.2.8
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
+  url_launcher: ^6.3.0
+
 
 dev_dependencies:
   flutter_test:
