--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,13 +31,15 @@ dependencies:
   flutter:
     sdk: flutter
 
-  firebase_core: ^3.3.0 
   cloud_firestore: ^5.2.0
   http: ^1.2.1
   reorderable_grid_view: ^2.2.8
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
   url_launcher: ^6.3.0
+  firebase_core: ^3.15.1
+  firebase_auth: ^5.6.2
+  google_sign_in: ^7.1.0
 
 
 dev_dependencies:
@@ -61,6 +63,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/google_logo.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
